--- a/app/(main)/_components/onair-place/gradient.module.css
+++ b/app/(main)/_components/onair-place/gradient.module.css
@@ -1,4 +1,3 @@
 .gradient_bar {
-    background: linear-gradient(90deg, #D3F4C8 28.5%, #FF7373 100%);
-    transform: rotate(180deg);
+    background: linear-gradient(90deg, #FF7373 0%, #D3F4C8 71.5%);
 }
